Language Script Works now on Localstorage

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,7 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} !(\.gif|\.jpg|\.png|\.swf|\.xml)$ [NC]
 RedirectMatch 301 ^/login /account/login
 RedirectMatch 301 ^/logout /account/disconected
-RewriteRule ^(.*)$ /index.php?origin=$1 [NC,L,QSA]
+RewriteRule ^(.*)$ /index.php?origin=$1 [NC,QSA]
 Options -Indexes
