FIXED A LOT OF CONTENT
- Added new image content to c_image like TopStories
- Added Habbo Experience BR
- Finished Transalator Script DAO and Select
- Added Habbo Club Join
- Added Habbo Club Join Translator
- Fixed a Bug on Url Class
- Added some Hotel DAO
- Removed Legacy Content
- Added __VIEW__ Constant
- Fixed session bug
- Added Club Subscribe Target
-

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 	Options -Indexes
+	RewriteRule ^!^c_images/downloads/exp-20060201-1/?$ -[L]
 	Redirect /login /account/login
 	Redirect /logout /account/disconnected
 	RewriteCond %{REQUEST_FILENAME} !-d
