Adressed some issues with MVC model and Added Module EnterHotel
- Fixed a issue with MVC Model Params threatments , and added Module Enter Hotel Params (Unfinished)...

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,8 @@
 	Options -Indexes
 	Redirect /login /account/login
 	Redirect /logout /account/disconnected
+	Redirect /tab/credits /credits
+	Redirect /tab/habboclub /club
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_URI} !-d
