--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,7 @@
 	Redirect /login /account/login
 	Redirect /logout /account/disconnected
 	Redirect /tab/credits /credits
+	Redirect /tab/redeem /credits
 	Redirect /tab/habboclub /club
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
