Fixes on Install , languageManager e Validations

--- a/web/includes/extensions/languageManager/pt/infoContent.ini
+++ b/web/includes/extensions/languageManager/pt/infoContent.ini
@@ -1,6 +1,6 @@
 [languageParams]
-languageName = Portugues
-languageAcronomy = RetroTest
+languageName = Português
+languageAcronomy = PT
 buildCreator = m.tiago
 buildDate = 16/04/19
 buildNotes = Modulo de Idioma Padrão do RetroCMS
