--- a/web/includes/extensions/languageManager/en/infoContent.ini
+++ b/web/includes/extensions/languageManager/en/infoContent.ini
@@ -1,6 +1,7 @@
 [languageParams]
 languageName = English
 languageAcronomy = EN
+languageFlag = UK
 buildCreator = m.tiago
 buildDate = 16/04/19
 buildNotes = English module template for RetroCMS
