--- a/application/install/composer.json
+++ b/application/install/composer.json
@@ -16,7 +16,8 @@
     },
 	"autoload": {
 		"psr-4": {
-		
+			"Controller\\": "../appcore/_controllers/",
+			"Template\\": "../appcore/_templates/"
 		}
 	}
 }
