--- a/.htaccess
+++ b/.htaccess
@@ -20,8 +20,9 @@
 	RewriteCond %{REQUEST_URI} !-f
 	RewriteRule ^c_images/(.*)$ /web/c_images/$1 [NC,L]
 	RewriteRule ^habboweb/(.*)$ /web/habboweb/$1 [NC,L]
+	RedirectMatch 301 ^/install/start /install/step/0 
 	RewriteCond %{REQUEST_URI} !\.(?:css|js|jpeg|gif|png)$ [NC]
-	RewriteRule ^(.*)$ index.php?origin=$1 [QSA,L]
+	RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
 
 
