--- a/.htaccess
+++ b/.htaccess
@@ -21,6 +21,8 @@
 	RewriteRule ^c_images/(.*)$ /web/c_images/$1 [NC,L]
 	RewriteRule ^habboweb/(.*)$ /web/habboweb/$1 [NC,L]
 	RedirectMatch 301 ^/install/start /install/step/0 
+	RedirectMatch 301 ^/login /account/login
+	RedirectMatch 301 ^/logout /account/disconnected
 	RewriteCond %{REQUEST_URI} !\.(?:css|js|jpeg|gif|png)$ [NC]
 	RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
