Added NavBar Page Object

--- a/.htaccess
+++ b/.htaccess
@@ -20,6 +20,9 @@
 	RedirectMatch 301 ^/install/start /install/step/0 
 	RedirectMatch 301 ^/login /account/login
 	RedirectMatch 301 ^/logout /account/disconnected
+	RedirectMatch 301 ^/tab/credits /credits 
+	RedirectMatch 301 ^/tab/redeem /credits 
+	RedirectMatch 301 ^/tab/habboclub /club
 </IfModule>
 
 #Rewrite for Web
