Finished Extensions Logic and Refactored some Language Manager Content

--- a/app/install/composer.json
+++ b/app/install/composer.json
@@ -21,7 +21,9 @@
 			"Controller\\": "../core/_controllers/",
 			"Template\\": "../core/_templates/",
 			"System\\": "../core/_system/",
-			"CLR\\": "../core/_classes/"
+			"CLR\\": "../core/_classes/",
+			"Extension\\": "../core/_extensions/"
+
 
 		}
 	},
